name:                sky-utils
version:             0.2.0.0
synopsis:            Utilities library for my projects
description:         Please see README.md
homepage:            https://github.com/xicesky/sky-utils#readme
license:             BSD3
license-file:        LICENSE
author:              Markus Dangl
maintainer:          sky@q1cc.net
copyright:           (c) 2016 Markus Dangl
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Sky.Util
    , Sky.Util.Container
  default-language:    Haskell2010
  ghc-options:
    -fwarn-tabs
    -fwarn-missing-signatures
    -fwarn-incomplete-patterns  
    -- -fwarn-name-shadowing  -- Happens too often and is usually ok
    -- -fwarn-unused-imports  -- Generates a load of warnings in main
  build-depends:
      base >= 4.7 && < 5
    , containers            >= 0.5.6.2
    , hashable              >= 1.2.4.0
    , unordered-containers  >= 0.2.7

--test-suite sky-utils-test
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Spec.hs
--  build-depends:       base
--                     , sky-utils
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/xicesky/sky-utils
